--- a/GetHired/GetHired.ASPClient/Views/Home/About.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Home/About.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<body class="container">
+﻿<body class="container">
     <h1><a id="Databases_Teamwork_Assignment_0"></a>Databases: Teamwork Assignment</h1>
     <h2><a id="Project_Description_2"></a>Project Description</h2>
     <p>Create a project of your choice and implement it using Code First approach with Entity Framework. You must use SQL Server 2017 as your database. Part of the data in SQL Server must be provided via external files (Excel, XML, JSON, zip, etc.) of your choice. You should create PDF reports based on your application logic. They should consists of meaningful data.</p>
