--- a/GetHired/GetHired.ASPClient/Views/Home/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Home/Index.cshtml
@@ -1,9 +1,4 @@
-﻿@using WebGrease
-@{
-    ViewBag.Title = "Home Page";
-}
-
-<body>
+﻿<body>
     <div>
         <img style="opacity: 0.7" src="/Resources/vid.gif" class="img-responsive">
         <div class="container">
