--- a/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Company/Index.cshtml
@@ -1,9 +1,7 @@
 ﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.CompanyModel>
 
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success btn-lg"})
+    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
 </p>
 <table class="table">
     <tr>
