--- a/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Index.cshtml
@@ -2,7 +2,7 @@
 
 <br />
 <p>
-    @Html.ActionLink("Add new job offer to company", "Create", new { id = ViewBag.CompanyId })
+    @Html.ActionLink("Add new job offer to company", "Create", new { id = ViewBag.CompanyId }, new { @class = "btn btn-success" })
 </p>
 <table class="table">
     <tr>
