--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -1,20 +1,18 @@
 ﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.JobOfferModel>
 
-<h2>Index</h2>
-
 <p>
-    @Html.ActionLink("Export PDF with job offers", "DownloadPDF")
+    @Html.ActionLink("Export PDF with job offers", "DownloadPDF", null, new { @class = "btn btn-success" })
 </p>
 
 @*working on json loader*@
 
-@using (Html.BeginForm("LoadFromJson", "JobOffer", FormMethod.Post, new {enctype = "multipart/form-data"}))
+@using (Html.BeginForm("LoadFromJson", "JobOffer", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <div>
         JSON FILE
-        <input type="file" name="jsonFile"/>
-        <br/>
-        <input type="submit" value="LoadFromJson" method="post" />
+        <input class="btn btn-success" type="file" name="jsonFile" />
+        <br />
+        <input class="btn btn-success" type="submit" value="LoadFromJson" method="post" />
     </div>
 }
 
@@ -47,26 +45,26 @@
 
     @foreach (var item in Model)
     {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Position)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Payment)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobOfferRating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.JobCategory)
-        </td>
-    </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Position)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Payment)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobOfferRating)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobType)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.JobCategory)
+            </td>
+        </tr>
     }
 
 </table>
