--- a/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Index.cshtml
@@ -1,9 +1,14 @@
 ﻿@model IEnumerable<GetHired.DTO.JobOfferModel>
 
-<br />
-<p>
-    @Html.ActionLink("Add new job offer to company", "Create", new { id = ViewBag.CompanyId }, new { @class = "btn btn-success" })
-</p>
+<div class="row">
+    <p class="col-md-6">
+        @Html.ActionLink("Add new job offer to company", "Create", new { id = ViewBag.CompanyId }, new { @class = "col-md-8 btn btn-success" })
+    </p>
+    <p class="col-md-6">
+        @Html.ActionLink("Back to Campany's Details", "Details", "Company", new { id = ViewBag.CompanyId }, new { @class = "col-md-8 btn btn-success" })
+    </p>
+</div>
+
 <table class="table">
     <tr>
         <th>
