--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -1,19 +1,21 @@
 ﻿@model System.Collections.Generic.IEnumerable<GetHired.DTO.JobOfferModel>
 
-<p>
-    @Html.ActionLink("Export PDF with job offers", "DownloadPDF", null, new { @class = "btn btn-success" })
-</p>
 
 @*working on json loader*@
 
 @using (Html.BeginForm("LoadFromJson", "JobOffer", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <div>
-        JSON FILE
-        <input class="btn btn-success" type="file" name="jsonFile" />
-        <br />
-        <input class="btn btn-success" type="submit" value="LoadFromJson" method="post" />
-    </div>
+<div class="row">
+    <p class="col-md-4">
+        @Html.ActionLink("Export PDF with job offers", "DownloadPDF", null, new { @class = "btn btn-success" })
+    </p>
+    <p class="col-md-4">
+        <input class="btn btn-success col-md-8" type="file" name="jsonFile" />
+    </p>
+    <p class="col-md-4">
+        <input class="btn btn-success col-md-8" type="submit" value="LoadFromJson" method="post" />
+    </p>
+</div>
 }
 
 <table class="table">
