Added css file in BundleConfig

--- a/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/JobOffer/Index.cshtml
@@ -10,7 +10,7 @@
         @Html.ActionLink("Export PDF with job offers", "DownloadPDF", null, new { @class = "btn btn-success" })
     </p>
     <p class="col-md-4">
-        <input class="btn btn-success col-md-8" type="file" name="jsonFile" />
+        <input class="btn btn-success" type="file" name="jsonFile" />
     </p>
     <p class="col-md-4">
         <input class="btn btn-success col-md-8" type="submit" value="LoadFromJson" method="post" />
