--- a/GetHired/GetHired.ASPClient/Views/Home/Index.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
             <div>
                 <div class="home-thumb">
                     <h1 class="wow fadeInUp" data-wow-delay="0.7s">Find the job that not only pays the bills but truly inspires!</h1>
-                    <a data-wow-delay="1s"
+                    <a data-wow-delay="1s">
                        @Html.ActionLink(
                            linkText: "Еxplore",
                            actionName: "Index",
                            controllerName: "Company",
                            routeValues: null,
-                           htmlAttributes: new { @class = "col-md-offset-5 wow fadeInUp section-btn btn btn-success smoothScroll" })
+                           htmlAttributes: new {@class = "col-md-offset-5 wow fadeInUp section-btn btn btn-success smoothScroll" })
                     </a>
                 </div>
             </div>
